processed/jira/txt/LU/LU-17315.txt
Key:        LU-17315
Summary:    RHEL 8.9 support for 2.12 clients and 2.14 servers (zfs only)
Link:       https://jira.whamcloud.com/browse/LU-17315
Type:       Task
Priority:   Minor
Status:     Resolved
Resolution: Fixed
Assignee:   Jian Yu
Reporter:   Olaf Faaland
Created:    Mon, 27 Nov 2023 16:02:18 +0000
Updated:    Fri, 15 Dec 2023 19:18:16 +0000
Resolved:   Tue, 12 Dec 2023 06:38:10 +0000
Labels:     llnl
Links:      Related: is related to  LU-17275

--- Description ---
We are still running in production with:

2.14.0-based server (zfs only)

2.12.9-based (client only)

Please backport patches for RHEL 8.9 support for both and push them to gerrit against b2_14 and b2_12 respectively.

Related to LU-17275

--- Comment (yujian, Tue, 12 Dec 2023 06:36:42 +0000) ---
You're welcome, Olaf.

--- Comment (ofaaland, Tue, 12 Dec 2023 05:02:33 +0000) ---
Hi Jian,

Our local testing passed without any unexpected changes in behavior.  We can close this ticket as far as we're concerned.  Thanks again.

--- Comment (yujian, Fri, 1 Dec 2023 20:37:52 +0000) ---
You're welcome, Olaf.

FYI, basic runtests passed on my local vm node with ZFS 2.1.13: https://testing.whamcloud.com/test_sessions/2a43bf7e-a39a-4d08-a8ee-93c17c6335e4

--- Comment (ofaaland, Fri, 1 Dec 2023 18:06:07 +0000) ---
Thank you very much Jian, commencing our local testing.

--- Comment (yujian, Fri, 1 Dec 2023 17:36:28 +0000) ---
Thank you, ofaaland.

With patch series https://review.whamcloud.com/c/fs/lustre-release/+/53280 applied on b2_14 branch, RHEL 8.9 server build passed with ZFS 2.1.13.

--- Comment (ofaaland, Wed, 29 Nov 2023 09:46:55 +0000) ---
ZFS 2.1.13

--- Comment (yujian, Wed, 29 Nov 2023 08:40:59 +0000) ---
You're welcome, ofaaland.

The patch series for Lustre b2_14 branch is being worked in https://review.whamcloud.com/c/fs/lustre-release/+/53280.

Could you please tell me what version of ZFS needs to be supported?

--- Comment (ofaaland, Wed, 29 Nov 2023 00:48:03 +0000) ---
Thank you Jian

--- Comment (yujian, Tue, 28 Nov 2023 08:20:33 +0000) ---
With patch series https://review.whamcloud.com/c/fs/lustre-release/+/53256 applied on b2_12 branch, RHEL 8.9 client build passed.

I'm working on the patch series for b2_14 branch.

--- Comment (yujian, Mon, 27 Nov 2023 19:23:16 +0000) ---
With https://review.whamcloud.com/c/fs/lustre-release/+/53256 applied on  b2_12 branch, client build failed as follows:

In function 'fortify_memset_chk',
    inlined from 'vvp_io_init' at /tmp/rpmbuild-lustre-root-4tIaJAxD/BUILD/lustre-2.12.9_12_g5b9b38b_dirty/lustre/llite/vvp_io.c:1520:2:
include/linux/fortify-string.h:239:4: error: call to '__write_overflow_field' declared with attribute warning: detected write beyond size of field (1st parameter); maybe use struct_group()? [-Werror]
    __write_overflow_field(p_size_field, size);
    ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
cc1: all warnings being treated as errors

I'm backporting more patches.

--- Comment (pjones, Mon, 27 Nov 2023 17:00:48 +0000) ---
Jian

Can you please assist with this?

Thanks

Peter

--- Comment (ofaaland, Mon, 27 Nov 2023 16:37:42 +0000) ---
For my records, my local tickets are TOSS-6181 and TOSS-6182
